--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.2",
         "friendsofsymfony/rest-bundle": "^2.5",
         "jms/serializer-bundle": "^3.1",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
@@ -60,6 +62,7 @@
         }
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.11",
         "symfony/web-server-bundle": "4.2.*"
     }
 }
